# hymera

./: LICENSE  README.md  spack.yaml
.github/workflows/: main.yml
inputs/mhd/: veceta_grid100x02x200.txt  vecg_grid100x02x200.txt  vecpsi_grid100x02x200.txt
src/: CMakeLists.txt  pgen.cpp
src/kinetic/: CurrentDensity.hpp  EM_Field.cpp  EM_Field.hpp  GuidingCenterEquations.hpp  RunawayDriver.cpp  RunawayDriver.h  c_wrapper.cpp  c_wrapper.h  kinetic.cpp  kinetic.hpp
src/mhd/: geometry.c  mfd_config.h  mhd_run.c  ts_functions.c
src/util/: common.hpp
tests/: CMakeLists.txt
tests/cmake/: Utils.cmake
